# haptic-harness

./: .gitignore  MANIFEST.in  README.md  READMEPY.md  SEGFAULT_TROUBLESHOOTING.md  deep_gui_diagnostic.py  diagnose_segfault.py  environment-locked.yml  fix_gui_segfault.py  fix_intel_graphics_gui.py  fix_mini_pc_gui.py  fix_post_generation_segfault.py  fix_segfault.py  implementation_verification.md  known_issues.md  manual_test_demo.py  pyproject.toml  readme_generator.py  requirements-lock.txt  run_headless.py  test_decimal_input_validation.py  test_post_generation_segfault.py  verify_environment.py
.github/workflows/: test.yml
haptic_harness_generator/: GUI.py  Generator.py  Styles.py  __init__.py  config_manager.py  instructions.html  main.py  run_tests.py  run_ui_tests.py  temp.py  test_core_improvements.py  test_suite.py  test_ui_improvements.py  testing.py  tyvekTile.dxf  ui_helpers.py  validation_engine.py
haptic_harness_generator/core/: __init__.py  config_manager.py  generator.py  precision_handler.py  validation_engine.py
haptic_harness_generator/tests/: __init__.py  test_suite.py
haptic_harness_generator/ui/: __init__.py  main_window.py  styles.py  ui_helpers.py
tests/: migrate_old_install.py  test_clean_install.py  test_full_installation.bat  test_full_installation.sh  test_precision_handler.py  test_suite.py
