[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["haptic_harness_generator"]

[project]
name = "haptic_harness_generator"
version = "0.0.42"
description = "Software to easily generate parameterized tiles for haptic harnesses"
requires-python = ">=3.8"
# Dependencies will be managed through conda environment
dependencies = []

[project.scripts]
run-haptic-harness = "haptic_harness_generator:run_app"
